# blog

./: README.md  pyproject.toml  server.py
web/templates/: 404.html  base.html  categories.html  contacts.html  index.html  main_page.html  navbar.html  orders.html
