[project]
name = "blog"
version = "0.1.0"
description = ""
authors = [
    {name = "Sergius-hub",email = "sergiusbox@mail.ru"}
]
readme = "README.md"
requires-python = "^3.14"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
lint = [
    "black (>=26.5.1,<27.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "mypy (>=2.2.0,<3.0.0)",
    "isort (>=8.0.1,<9.0.0)"
]
